Add commands to modify settings for other players
Introduces new commands: visitradiusother, moveradiusother, movethresholdother, and moveloadother, allowing admins to change visit/move settings and movement loading status for other players. Updates command registration, permission structure, and notification logic to support these features and reflects changes in plugin.yml.